--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,8 +11,8 @@
 - name: Setup CRON Schedule
   cron:
     name="CentOS"
-    minute="{{ 59 | random(seed=inventory_hostname) }}"
-    hour="{{ 23 | random(seed=inventory_hostname) }}"
+    minute="{{ centos_mirror_cron_minute }}"
+    hour="{{ centos_mirror_cron_hour }}"
     user="{{ mirror_unix_user }}"
     state="present"
     job="{{ mirror_cron_dir }}/centos-mirror"
