--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,4 +3,4 @@
 centos_mirror_source: "us-msync.centos.org::CentOS/"
 centos_mirror_cron_disabled: true
 centos_mirror_cron_minute: "{{ 59 | random(seed=inventory_hostname) }}"
-centos_mirror_cron_hour: "{{ 23 | random(seed=inventory_hostname) }}"
+centos_mirror_cron_hour: "3,9,15,21"
